* 2013-12-02 - thorben.betten@open-xchange.com

 - Fix for bug 30119: Avoid superfluous database updates on JSlob write-back requests

* 2013-11-19 - marc.arens@open-xchange.com

 - Fix for bug 29851: Keep Stanza to send proper client acks before recasting for local/remote delivery
 
* 2013-11-19 - thorben.betten@open-xchange.com

 - Fix for bug 29438: Deal with changing User-Agent identifier when Apple Media Player jumps in
 - Fix for bug 29887: Check service availability prior to using it

* 2013-11-18 - tobias.friedrich@open-xchange.com

 - Fix for bug 29391: Extend the size of the 'name' column in the 'infostoreReservedPaths' table 
 - Fix for bug 29866: Don't carry over empty last-modification timestamp if appointment was not updated 

* 2013-11-15 - marc.arens@open-xchange.com

 - Fix for bug 29794: Prevent cuncurrent cleanup via mutual exclusion
 - Fix for bug 29795: Prevent cuncurrent cleanup via mutual exclusion
 
* 2013-11-14 - thorben.betten@open-xchange.com

 - Fix for bug 29824: Don't re-distribute already remotely received events

* 2013-11-14 - tobias.friedrich@open-xchange.com

 - Fix for bug 29817: Consider "If-Match" header on DELETE and PUT operations
 - Fix for bug 29770: Use custom (de)serialization for session in distributed events 

* 2013-11-13 - thorben.betten@open-xchange.com

 - Fix for bug 29790: Check availability of session event property

* 2013-11-13 - jan.bauerdick@open-xchange.com

 - Fix for bug 29693: Use contact_id to search contact

* 2013-11-12 - thorben.betten@open-xchange.com

 - Fix for bug 29770: Only distribute Java POJOs
 - Fix for bug 29762: Added proper mapping for "MOBILITY" constant from UserPermissionBits.java
 - Fix for bug 29748: Invoke "AJAXServlet.encodeUrl()" with proper arguments when safe-encoding a publication's site name
 - Fix for bug 29747: Orderly handle possible 'MessageRemovedException' on access to message content

* 2013-11-12 - tobias.friedrich@open-xchange.com
