@@ -1,3 +1,7 @@
+* 2013-12-06 - thorben.betten@open-xchange.com
+
+ - Fix for bug 27640: Properly decode "Subject" header in JSON MIME representation
+
 * 2013-12-02 - thorben.betten@open-xchange.com
 
  - Fix for bug 30119: Avoid superfluous database updates on JSlob write-back requests
